# kernel-level-memory-scanner

./: API.md  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  FEATURES.md  README.md  TECHNICAL_SPECS.md  USAGE.md
include/: advanced_pe_forensics.h  advanced_persistence_detector.h  advanced_threat_simulation.h  amsi_bypass_detector.h  anti_debug.h  apt_detector.h  attack_chain_visualizer.h  behavioral_analysis.h  bootkit_detector.h  c2_detector.h  code_cave_detector.h  code_injection.h  disassembler.h  dll_hijacking_detector.h  driver_analyzer.h  edr_evasion.h  edr_evasion_detector.h  fileless_attack_detector.h  fileless_malware.h  heartbeat_detector.h  kernel_callbacks.h  kernel_object_hook_detector.h  lateral_movement_detector.h  lotl_detector.h  malware_sandbox.h  malware_sandbox_v2.h  memory_carving.h  memory_forensics.h  memory_forensics_v2.h  memory_integrity_checker.h  network_analyzer.h  network_traffic_analyzer_v2.h  neural_network.h  pe_forensics.h  persistence_detector.h  privilege_escalation.h  process_ghosting_detector.h  process_hollowing.h  ransomware_detector.h  rootkit_detector.h  (+7 more)
src/: main.cpp
src/analysis/: advanced_pe_forensics.cpp  advanced_threat_simulation.cpp  anti_debug.cpp  attack_chain_visualizer.cpp  behavioral_analysis.cpp  code_cave_detector.cpp  disassembler.cpp  malware_sandbox.cpp  malware_sandbox_v2.cpp  memory_carving.cpp  memory_forensics.cpp  memory_forensics_v2.cpp  memory_integrity_checker.cpp  network_analyzer.cpp  network_traffic_analyzer_v2.cpp  neural_network.cpp  pe_forensics.cpp  shellcode_analyzer.cpp  threat_hunting_engine.cpp  threat_intelligence_v2.cpp  volatility_plugins.cpp  yara_compiler.cpp
src/detection/: advanced_persistence_detector.cpp  amsi_bypass_detector.cpp  apt_detector.cpp  bootkit_detector.cpp  c2_detector.cpp  code_injection.cpp  dll_hijacking_detector.cpp  driver_analyzer.cpp  edr_evasion.cpp  edr_evasion_detector.cpp  fileless_attack_detector.cpp  fileless_malware.cpp  heartbeat_detector.cpp  kernel_callbacks.cpp  kernel_object_hook_detector.cpp  lateral_movement_detector.cpp  lotl_detector.cpp  persistence_detector.cpp  privilege_escalation.cpp  process_ghosting_detector.cpp  process_hollowing.cpp  ransomware_detector.cpp  rootkit_detector.cpp  syscall_hooks.cpp  threat_intelligence.cpp
